# Praesidio

./: .dockerignore  Cargo.toml  Dockerfile  README.md  railway.toml
crates/mcpshield-behavior/: Cargo.toml
crates/mcpshield-behavior/src/: anomaly.rs  baseline.rs  features.rs  lib.rs  profile.rs  store.rs
crates/mcpshield-cli/: Cargo.toml
crates/mcpshield-cli/src/: main.rs
crates/mcpshield-cli/src/commands/: audit.rs  dashboard.rs  honeypot.rs  init.rs  mod.rs  pin.rs  proxy.rs  registry.rs  report.rs  scan.rs
crates/mcpshield-core/: Cargo.toml
crates/mcpshield-core/src/: config.rs  lib.rs
crates/mcpshield-core/src/audit/: event.rs  mod.rs
crates/mcpshield-core/src/detection/: mod.rs  rules.rs  severity.rs
crates/mcpshield-core/src/filter/: credential_leak.rs  exfil_detector.rs  injection_filter.rs  mod.rs
crates/mcpshield-core/src/permissions/: enforcer.rs  mod.rs  scope.rs
crates/mcpshield-core/src/pinner/: mod.rs  schema_hash.rs  store.rs
crates/mcpshield-core/src/proxy/: message.rs  mod.rs  sse_proxy.rs  stdio_proxy.rs
crates/mcpshield-core/src/scanner/: cross_server.rs  mod.rs  pattern_matcher.rs  tool_poisoning.rs  unicode_analysis.rs
crates/mcpshield-honeypot/: Cargo.toml
crates/mcpshield-honeypot/src/: lib.rs  logger.rs  report.rs  server.rs  traps.rs
crates/mcpshield-llm/: Cargo.toml
crates/mcpshield-llm/src/: analyzer.rs  classifier.rs  lib.rs  semantic_checker.rs
crates/mcpshield-llm/src/provider/: anthropic.rs  local.rs  mock.rs  mod.rs  openai.rs
crates/mcpshield-threat-feed/: Cargo.toml
crates/mcpshield-threat-feed/src/: feed.rs  lib.rs  registry.rs  signature.rs  submission.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: index.html
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: AnimatedNumber.tsx  EventRow.tsx  Layout.tsx  LiveFeed.tsx  OWASPScorecard.tsx  ProgressRing.tsx  ServerRow.tsx  SeverityBadge.tsx  Sidebar.tsx  Sparkline.tsx  StatCard.tsx  ThreatCard.tsx  TrendChart.tsx
dashboard/src/hooks/: useLandingReveal.ts  useParallax.ts  useReveal.ts  useScrollReveal.ts  useSplitTextReveal.ts
dashboard/src/landing/: CTA.tsx  Comparison.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  ParticleCanvas.tsx  Problem.tsx
dashboard/src/pages/: AuditLog.tsx  Compliance.tsx  Honeypot.tsx  LandingPage.tsx  Overview.tsx  Servers.tsx  Settings.tsx  Threats.tsx
rules/: owasp_mcp_top10.toml
server/: Cargo.toml
server/src/: main.rs  state.rs
server/src/routes/: audit.rs  compliance.rs  config.rs  events.rs  mod.rs  scan.rs
