[workspace]
resolver = "2"
members = [
    "crates/mcpshield-core",
    "crates/mcpshield-cli",
    "crates/mcpshield-llm",
    "crates/mcpshield-behavior",
    "crates/mcpshield-threat-feed",
    "crates/mcpshield-honeypot",
    "server",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ArkaSaha/mcpshield"

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
sha2 = "0.10"
toml = "0.8"
dirs = "5"
colored = "2"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"

# Workspace crates
mcpshield-core = { path = "crates/mcpshield-core" }
mcpshield-llm = { path = "crates/mcpshield-llm" }
mcpshield-behavior = { path = "crates/mcpshield-behavior" }
mcpshield-threat-feed = { path = "crates/mcpshield-threat-feed" }
mcpshield-honeypot = { path = "crates/mcpshield-honeypot" }
