[package]
name = "mcpshield-behavior"
description = "Behavioral fingerprinting engine for MCPShield"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mcpshield-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
