[package]
name = "mcpshield-cli"
description = "MCPShield CLI binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcpshield"
path = "src/main.rs"

[dependencies]
mcpshield-core = { workspace = true }
mcpshield-llm = { workspace = true }
mcpshield-behavior = { workspace = true }
mcpshield-threat-feed = { workspace = true }
mcpshield-honeypot = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
