[package]
name = "mcpshield-core"
description = "Core security engine for MCPShield"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
colored = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
