[package]
name = "mcpshield-honeypot"
description = "Honeypot MCP server for MCPShield"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mcpshield-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
