[package]
name = "mcpshield-threat-feed"
description = "Threat intelligence feed for MCPShield"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mcpshield-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
